<resources>
    <string name="app_name" translatable="false">Quiz</string>
    <string name="button_text_submit">SUBMIT</string>
    <string name="button_text_previous">Previous</string>
    <string name="button_text_next">NEXT</string>
    <string name="toolbar_title_next">Question</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result_answered">You have answered</string>
    <string name="out_of">/</string>
    <string name="button_result_back">Back</string>
    <string name="button_result_exit">Exit</string>
    <string name="button_result_share">Share</string>
    
    <string name="i_result_answered">I have answered</string>
    <string name="list_of_question_title">Look at my answers:</string>
    <string name="my_answer">My answer:</string>
    <string name="choose_client">Choose Email Client:</string>
</resources>