<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_begin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/answered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/results"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/result_answered"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintBaseline_toBaselineOf="@id/answered"
        app:layout_constraintStart_toEndOf="@id/answered"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/out_of"
        android:textSize="35sp"/>
    <TextView
        android:id="@+id/present"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/answered"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button_back,button_exit,button_share"
        app:layout_constraintTop_toBottomOf="@id/present"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:flow_horizontalGap="8dp"
        app:flow_wrapMode="chain"
        android:padding="16dp"
        />

        <Button
            android:id="@+id/button_back"
            android:text="@string/button_result_back"
            app:icon="@drawable/outline_autorenew_black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/button_exit"
            android:text="@string/button_result_exit"
            app:icon="@drawable/outline_logout_black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/button_share"
            android:text="@string/button_result_share"
            app:icon="@drawable/outline_share_black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

</androidx.constraintlayout.widget.ConstraintLayout>