<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/appBarLayout"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_marginTop="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:navigationContentDescription="Back to the previous question"
            app:navigationIcon="@drawable/ic_baseline_chevron_left_24"
            app:title="Question 1" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/previous_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/margin_start_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/margin_end_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/margin_top_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/margin_bottom_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp" />


            <TextView
                android:id="@+id/question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/margin_end_guideline"
                app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
                app:layout_constraintTop_toTopOf="@id/margin_top_guideline"
                tools:text="Est-ce qu'il travaille a Paris?" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/margin_end_guideline"
                app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
                app:layout_constraintTop_toBottomOf="@id/question">

                <RadioButton
                    android:id="@+id/option_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Option 1"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <RadioButton
                    android:id="@+id/option_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Option 2"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <RadioButton
                    android:id="@+id/option_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Option 3"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <RadioButton
                    android:id="@+id/option_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:checked="true"
                    tools:text="Option 4"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <RadioButton
                    android:id="@+id/option_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Option 6"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <RadioButton
                    android:id="@+id/option_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Option 7"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <RadioButton
                    android:id="@+id/option_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Option 8"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <RadioButton
                    android:id="@+id/option_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Option 9"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <RadioButton
                    android:id="@+id/option_ten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Option 10"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/previous_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_text_previous"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_text_next"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>